[Interim][v0.0.15][HEALING] Add managed stop functionality draft in the data capture focused mode.  First draft and needs further test and clean. Also adds DL0100A1 commands into the sample commands (more readily used/visible in regular UI mode).

--- a/css/custom.css
+++ b/css/custom.css
@@ -231,6 +231,12 @@ span#filesWrittenBadge.badge {
   line-height: 18px;
   margin-top: 3px;
 }
+
+#capture_ui_buttons button.tempUiBigButtonSmallText {
+  font-size: 1.5em;
+  line-height: 1.1;
+}
+
 #capture_ui_buttons button {
   width:  45%;
   height: 80px;
